# hts-robotics

./: .dockerignore  .gitignore  .gitmodules  CUDADockerfile  Dockerfile  README.md  TODO  anygrasp_env.yaml  cloud.npz  cloud.pcd  dependencies.repos  docker-compose-cuda.yml  docker-compose.yml  franka_entrypoint.sh  full_cloud_1771497955.npz  full_cloud_1771497955.pcd  full_cloud_1771498683.npz  full_cloud_1771498683.pcd  full_cloud_1771505970.npz  full_cloud_1771505970.pcd  full_cloud_1771506309.npz  full_cloud_1771506309.pcd  full_cloud_1771506734.npz  full_cloud_1771506734.pcd  full_cloud_1771507195.npz  full_cloud_1771507195.pcd  full_cloud_1771507348.npz  full_cloud_1771507348.pcd  full_cloud_1771564664.npz  full_cloud_1771564664.pcd  full_cloud_1771564864.npz  full_cloud_1771564864.pcd  full_cloud_1771565092.npz  full_cloud_1771565092.pcd  full_cloud_1771567279.npz  full_cloud_1771567279.pcd  full_cloud_1771568968.npz  full_cloud_1771568968.pcd  full_cloud_1771575275.npz  full_cloud_1771575275.pcd  (+31 more)
franka_gazebo/franka_gazebo_bringup/config/: franka_gazebo_controllers.yaml
franka_pybullet/: CMakeLists.txt  package.xml
franka_ros2/: .gitignore  Dockerfile  docker-compose.yml  package.xml
franka_ros2/franka_gazebo/franka_gazebo_bringup/launch/: gazebo_joint_impedance_controller_example.launch.py
franka_ros2/hello_moveit/: package.xml
franka_ros2/hello_moveit/src/: hello_moveit.cpp
franka_ros2/hts_controller/: CMakeLists.txt
franka_ros2/hts_robotics/: CMakeLists.txt  README.md  package.xml
franka_ros2/hts_robotics/config/: controllers.yaml
franka_ros2/hts_robotics/descriptions/: franka_robot.xacro
franka_ros2/hts_robotics/descriptions/robots/common/: franka_arm.ros2_control.xacro  franka_arm.srdf.xacro  franka_arm.xacro  franka_robot.xacro
franka_ros2/hts_robotics/descriptions/robots/fp3/: fp3.urdf.xacro
franka_ros2/hts_robotics/descriptions/robots/fr3/: fr3.srdf.xacro  fr3.urdf.xacro
franka_ros2/hts_robotics/descriptions/robots/fr3_duo/: fr3_duo.urdf.xacro  fr3_duo_arm.urdf.xacro  fr3_duo_fixed_structure.urdf.xacro
franka_ros2/hts_robotics/descriptions/robots/fr3_duo/fr3_duo_cover/: fr3_duo_cover.xacro  inertials.yaml  kinematics.yaml
franka_ros2/hts_robotics/descriptions/robots/fr3_duo/fr3_duo_mount/: fr3_duo_mount.xacro  inertials.yaml  kinematics.yaml
franka_ros2/hts_robotics/descriptions/robots/fr3v2/: fr3v2.urdf.xacro  inertials.yaml
franka_ros2/hts_robotics/launch/: hts_bringup.launch.py  hts_gazebo.launch.py  moveit.launch.py
franka_ros2/hts_robotics/src/: hts_main.cpp
franka_semantic_components/: CMakeLists.txt
hello_moveit/src/: hello_moveit.cpp
hts_anygrasp/: package.xml  setup.cfg  setup.py
hts_anygrasp/hts_anygrasp/: anygrasp_node.py
hts_controller/: package.xml
hts_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
hts_description/urdf/: fr3.urdf  fr3.urdf.xacro  panda.urdf  panda.urdf.xacro
hts_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
hts_moveit_config/config/: bio_ik_kinematics.yaml  chomp_planning.yaml  fr3.ros2_control.xacro  fr3.srdf  fr3.urdf.xacro  fr3_arm.srdf.xacro  fr3_arm_hand.srdf.xacro  fr3_hand.ros2_control.xacro  gripper_moveit_controllers.yaml  hand.xacro  hard_joint_limits.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  panda_arm.xacro  panda_arm_hand.srdf.xacro  planning_parameters.yaml  ros2_controllers.yaml  stomp_planning.yaml  trac_ik_kinematics.yaml
hts_moveit_config/launch/: demo.launch.py  moveit.rviz  moveit_empty.rviz  moveit_rviz.launch.py
hts_moveit_config/robot/: fr3.srdf  fr3.urdf.xacro  fr3_arm.srdf.xacro  fr3_arm.xacro  fr3_arm_hand.srdf.xacro  hand.xacro
hts_msgs/: CMakeLists.txt  package.xml
hts_msgs/action/: ComputeGraspValidity.action  GripperOpen.action  MoveTarget.action  PickUpTarget.action  RequestGrasp.action
hts_msgs/srv/: GetObjectPosition.srv  RequestGrasp.srv
hts_robotics/: CMakeLists.txt  README.md  package.xml
hts_robotics/action/: GraspObject.action  GripperClose.action  GripperOpen.action  MoveTarget.action  MoveToPoint.action  PickUpTarget.action
hts_robotics/anygrasp/: .gitignore
hts_robotics/commands/: close.sh  grasp.sh  move.sh  open.sh  pickup.sh
hts_robotics/config/: all_planners.yaml  all_planners_nightly.yaml  anygrasp_params.yaml  chomp_planning.yaml  config.yaml  controllers.yaml  joint_limits.yaml  kinematics.yaml  launch_params.yaml  moveit.rviz  ompl_planning.yaml  pipelines.yaml  planning_pipelines.yaml  ros_controllers.yaml  sensors_kinect_pointcloud.yaml  simple_controllers.yaml  target_objects.yaml  trajectory_execution.yaml
hts_robotics/launch/: hts_bringup.launch.py
hts_robotics/objects/: box.sdf  conic_flask.sdf  cylinder.sdf  round_bottomed_flask.sdf  sphere.sdf  volumetric_flask.sdf
hts_robotics/objects/meshes/: conic_flask.stl  conic_flask_collision.stl  round_bottomed_flask.stl  round_bottomed_flask_collision.stl  volumetric_flask.stl  volumetric_flask_collision.stl
hts_robotics/src/: hts_main.cpp  hts_missions.cpp
hts_robotics_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hts_robotics_moveit_config/config/: fr3.ros2_control.xacro  hts_robotics.srdf  hts_robotics.xacro  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
