<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hts_anygrasp</name>
  <version>2.0.2</version>
  <description>Contains the HTS robotics project</description>
  <maintainer email="benjamin.tran@outlook.com.au">tranjamin</maintainer>
  <license>Apache 2.0</license>

  <!-- <buildtool_depend>ament_python</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>hts_msgs</depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosidl_runtime_py</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
