<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hts_robotics</name>
  <version>2.0.2</version>
  <description>Contains the HTS robotics project</description>
  <maintainer email="benjamin.tran@outlook.com.au">tranjamin</maintainer>
  <license>Apache 2.0</license>

  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>franka_description</depend>
  <depend>franka_ign_ros2_control</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <exec_depend>hts_anygrasp</exec_depend>
  <depend>hts_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>franka_hardware</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2controlcli</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
